# ProductSemiValues

./: .gitignore  CMakeLists.txt  LocalExplainer.py  README.md  esp_stable.py  esp_stable2.py  explainer.py  naive_bayes.py  product_games_shapley.py  pyproject.toml
benchmarks/: bench_cpp_vs_python.py  bench_mq_d3.py  bench_mq_sweep.py  test_bench_phi_matrix.py
csrc/: explain_kernel.cpp
src/pgshapley/: _cpp_ext.py
src/pgshapley/kernels/: explainer.py
src/pgshapley/treeshap/: explainer.py  product_games.py
tests/: naive_shapley.py  naive_tree_backend.py  naive_tree_explainer.py  test_backend_vs_naive.py  test_cpp_extension.py  test_phi_matrix.py  test_treeshap_e2e_vs_shap.py  test_treeshap_frontend_sklearn.py
