[project]
name = "pgshapley"
version = "0.1.0"
description = "TreeSHAP via product-game Shapley factors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[dependency-groups]
testing = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "scikit-learn>=1.3",
    "shap>=0.50",
]
dev = ["pgshapley[jax]", {include-group = "testing"}]

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.12", "numpy>=1.24"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/pgshapley"]

# When no C++ compiler is available, fall back to pure-Python install.
[[tool.scikit-build.overrides]]
if.failed = true
wheel.cmake = false

[tool.uv]
environments = ["python_version >= '3.11' and python_version < '3.14'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
